[tool.poetry]
name = "genai-python"
version = "0.1.0"
description = ""
authors = ["maryamamin12 <ma2084334@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.10"
langchain-community = "^0.3.2"
langchain-openai = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
